detalles controller router
